test_suite5/ALAN/test_suite/alan-2022-examples/passing/000320_deriv.alan
source P0 begin leave 215 - w() end
